[metadata]
name = myr.base
author = Vnet a.s.
author-email = sap@vnet.sk
summary = Auto-announce Celery-based tasks
description-file = README.rst
home-page = https://github.com/Vnet-as/myr-base
license = MIT
classifier =
    Development Status :: 2 - Beta
    Environmnet :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    rpc
    amqp
    announce
[files]
packages =
    myr
    myr.base
namespace_packages =
    myr
